# esspresso

./: .gitignore  CLAUDE.md  LICENSE  README.md  esspresso.py  pyproject.toml
scripts/: capture_screenshot.py
