[project]
name = "esspresso"
version = "0.1.0"
description = "Interactive terminal wrapper around esptool.py for flashing ESP32 boards."
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "questionary>=2.0",
    "esptool>=4.7",
]

[project.scripts]
esspresso = "esspresso:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["esspresso"]
