[project]
name = "esspresso"
version = "0.1.0"
description = "Interactive terminal wrapper around esptool for flashing ESP32 boards."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Helton Maia", email = "helton.maia@ufrn.br" },
]
dependencies = [
    "rich>=13.0",
    "questionary>=2.0",
    "esptool>=4.7",
]

[project.urls]
Homepage = "https://heltonmaia.com"
Repository = "https://github.com/heltonmaia/esspresso"

[project.scripts]
esspresso = "esspresso:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["esspresso"]
